--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -21,5 +21,8 @@
 	<p><button onclick="beep(1);">Test Beep</button></p>
 	<p><button id="myButton" onclick="myButtonClicked()">My Button</button></p>
 	<div id="buttonStatus">Not clicked.</div>
+	<form action="page2.html" method="POST">
+		<input type="submit" />
+	</form>
 </body>
 </html>
