--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -24,5 +24,9 @@
 	<form action="page2.html" method="POST">
 		<input type="submit" />
 	</form>
+	
+	<h1>Add contact</h1>
+	<p><input id="txtContact" type="text" />
+	<button id="btnAddContact" onclick="addContact(document.getElementById('txtContact').value)">Add contact</button></p>
 </body>
 </html>
