Added support for callbacks. Improved handling of deviceready event. Minor fixes, see details. Added loadPage method for properly changing page in PhoneGap. Fixed change page test not changing page properly. Fixed new contacts not saved.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -21,7 +21,7 @@
 	<p><button onclick="beep(1);">Test Beep</button></p>
 	<p><button id="myButton" onclick="myButtonClicked()">My Button</button></p>
 	<div id="buttonStatus">Not clicked.</div>
-	<form action="page2.html" method="POST">
+	<form action="page2.html" method="GET">
 		<input type="submit" />
 	</form>
 	
