Disable form submit test (page isn't changed properly). Added button to verify if a contact exist.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -28,5 +28,7 @@
 	<h1>Add contact</h1>
 	<p><input id="txtContact" type="text" />
 	<button id="btnAddContact" onclick="addContact(document.getElementById('txtContact').value)">Add contact</button></p>
+	<button id="btnVerify" onclick="verifyContact(document.getElementById('txtContact').value)">Verify</button></p>
+	<p id="contactStatus"></p>
 </body>
 </html>
