Removed viewport meta tag. Pages should scale dynamically. Changed button status tag.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<meta name="viewport" content="width=320; user-scalable=no" />
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<title>Test Runner Demo</title>
 	<script type="text/javascript" charset="utf-8" src="js/cordova-1.5.0.js"></script>
@@ -20,7 +19,7 @@
 	<p><button onclick="vibrate(150);">Test Vibrate</button></p>
 	<p><button onclick="beep(1);">Test Beep</button></p>
 	<p><button id="myButton" onclick="myButtonClicked()">My Button</button></p>
-	<div id="buttonStatus">Not clicked.</div>
+	<p id="buttonStatus">Not clicked.</p>
 	<form action="page2.html" method="GET">
 		<input type="submit" />
 	</form>
