Added back link on page 2.

--- a/assets/www/page2.html
+++ b/assets/www/page2.html
@@ -12,5 +12,6 @@
 <body onload="init();">
 	<h1>Page 2</h1>
 	<p id="page2">This is page 2.</p>
+	<p><a href="index.html">Back</a></p>
 </body>
 </html>
