Updated test runner with new init scripts.

--- a/assets/www/page2.html
+++ b/assets/www/page2.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" charset="utf-8" src="js/test_main.js"></script>
 </head>
 
-<body onload="init();">
+<body onload="initTesting();">
 	<h1>Page 2</h1>
 	<p id="page2">This is page 2.</p>
 	<p><a href="index.html">Back</a></p>
