--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <!-- Note the init function call in the onload event below: -->
-<body onload="init();">
+<body onload="initTesting(false);">
 	<h1>Test Runner Demo</h1>
 	<p><button onclick="window.location.reload();">Reload page</button></p>
-	<p><button onclick="testRunner.resetSession();">Reset test session</button></p>
-	<p><button onclick="testRunner.run();">Start</button></p>
+	<p><button onclick="testRunnerStarter.runner.resetSession();">Reset test session</button></p>
+	<p><button onclick="testRunnerStarter.runner.run();">Start</button></p>
 	
 	<p><button onclick="vibrate(150);">Test Vibrate</button></p>
 	<p><button onclick="beep(1);">Test Beep</button></p>
