--- a/assets/www/test_results.html
+++ b/assets/www/test_results.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" charset="utf-8" src="js/test_main.js"></script>
 </head>
 
-<body onload="init(true);">
+<body onload="initTestResults();">
 	<h1>Results</h1>
 	<p><a href="index.html">Main page</a></p>
 	
